# manyagents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_NOTES.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  manyagent.env.example  mkdocs.yml  oma.env.example  oms.env.example  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: docs.yml  main.yml  release.yml
docs/: index.md
docs/design/: ManyAgent - Design Principles.md  ManyAgent - Open Questions & TODOs.md  ManyAgent - Overview.md  ManyAgent - Package Structure & Workflow.md  ManyAgent - Trace Renditions & Mining (M12-M14).md  Oh My Agent - Design Principles.md  Oh My Agent - Open Questions & TODOs.md  Oh My Agent - Overview.md  Oh My Agent - Package Structure & Workflow.md  Oh My Swarm - Design Principles.md  Oh My Swarm - Open Questions & TODOs.md  Oh My Swarm - Overview.md  Oh My Swarm - Package Structure & Workflow.md  Oh My Swarm - Trace Renditions & Mining (M12-M14).md
docs/design/components/: manyagent.adapters.md  manyagent.bank.md  manyagent.capture.md  manyagent.cli.md  manyagent.core.md  manyagent.distill.md  manyagent.forum.md  manyagent.procedures.md  manyagent.utils.md  manyagent.web.md  manyagent.web.viewer.md  oma.adapters.md  oma.bank.md  oma.capture.md  oma.cli.md  oma.core.md  oma.distill.md  oma.forum.md  oma.utils.md  oma.web.md  oms.adapters.md  oms.bank.md  oms.capture.md  oms.cli.md  oms.core.md  oms.distill.md  oms.forum.md  oms.procedures.md  oms.utils.md  oms.web.md  oms.web.viewer.md
docs/getting-started/: installation.md
docs/guide/: authoring-an-installer.md  curation.md  quickstart.md  remote-access.md  viewer.md
infra/cloudflared/: README.md
scripts/: simulate_story.py  smoke_m11.py
src/manyagent/: __init__.py  __init__.pyi  _handlers.py  _hook.py  _installer.py  _mcp.py  _skills.py  cli.py  preflight.py  testing.py
src/manyagent/adapters/: __init__.py  base.py  registry.py
src/manyagent/bank/: __init__.py  base.py  fake.py  retry.py  supabase_bank.py
src/manyagent/capture/: __init__.py  bound.py  conformance.py  models.py  scrub.py
src/manyagent/core/: __init__.py  collection.py  models.py
src/manyagent/distill/: __init__.py  curator.py  parse.py  prompts.py  resolve.py  schema.py  server.py  weighting.py
src/manyagent/forum/: __init__.py  anti_meta.py  discuss.py  parser.py  prompt.py  schema.py
src/manyagent/utils/: __init__.py  config.py  facets.py  log.py  messages.py  provider.py  sid.py  slug.py  ui.py
src/manyagent/web/: __init__.py  api.py  server.py  skill.py
src/oma/: __init__.py  __init__.pyi  _handlers.py  _installer.py  _mcp.py  cli.py  preflight.py
src/oma/adapters/: __init__.py  base.py  registry.py
src/oma/bank/: __init__.py  base.py  fake.py  retry.py  supabase_bank.py
src/oma/capture/: __init__.py  bound.py  conformance.py  models.py  scrub.py
src/oma/core/: __init__.py  models.py
src/oma/distill/: __init__.py  curator.py  parse.py  prompts.py  resolve.py  schema.py  server.py  weighting.py
src/oma/forum/: __init__.py  anti_meta.py  discuss.py  parser.py  prompt.py  schema.py
src/oma/utils/: __init__.py  config.py  log.py  provider.py  sid.py
src/oma/web/: __init__.py  api.py  server.py
src/oms/: __init__.py  __init__.pyi  _handlers.py  _hook.py  _installer.py  _mcp.py  cli.py  preflight.py  testing.py
src/oms/adapters/: __init__.py  base.py  registry.py
src/oms/bank/: __init__.py  base.py  fake.py  retry.py  supabase_bank.py
src/oms/capture/: __init__.py  bound.py  conformance.py  models.py  scrub.py
src/oms/core/: __init__.py  models.py
src/oms/distill/: __init__.py  curator.py  parse.py  prompts.py  resolve.py  schema.py  server.py  weighting.py
src/oms/forum/: __init__.py  anti_meta.py  discuss.py  parser.py  prompt.py  schema.py
src/oms/utils/: __init__.py  config.py  log.py  messages.py  provider.py  sid.py  ui.py
supabase/: config.toml  seed.sql
supabase/migrations/: 00001_initial_schema.sql  00002_packet_quarantine.sql  00003_trace_scrub_meta.sql  00004_three_role_rls.sql  00005_preference.sql  00006_swarms_taxonomy.sql  00007_injection_ledger.sql  00008_public_traces.sql  00009_trace_renditions.sql  00010_uuid_session_ids.sql  00011_agent_principal.sql  00012_goal_slug_facets.sql  00013_injection_helpful.sql
supabase/rollbacks/: 00008_revoke_public_traces.sql  00009_revoke_public_renditions.sql
tests/: conftest.py  test_adapter_install.py  test_adapters.py  test_bank.py  test_bank_integration.py  test_capture.py  test_cli.py  test_core.py  test_distill.py  test_e2e.py  test_forum.py  test_handlers.py  test_hook.py  test_installer.py  test_mcp.py  test_mcp_standalone.py  test_miners.py  test_package.py  test_preflight.py  test_skills.py  test_slug.py  test_testing.py  test_utils.py  test_web.py
web/app/: index.html
web/viewer/: jsconfig.json  package-lock.json  package.json  svelte.config.js  vite.config.js
(+69 files in other folders)
